scss/pages/_wp-blog.scss
//	@ Author: Consensus Interactive
//	@ Author URI: ConsensusInteractive.com
//	@ Description: Blog Page styles

.page-template-page-blog {
    .fl-page {
        background-color: #FDD9C8;
    }
    .fl-archive {
        background-color: #fff;
        padding-bottom: 50px;
    }
    header {
        .mega--menu li:last-child {
            padding-right: 0 !important;
        }
        .fl-module-photo .fl-module-content {
            margin-left: 0 !important;
        }   
    }
    .alm-reveal {
        display: flex;
        -ms-flex-wrap: wrap;
        flex-wrap: wrap;
        margin-right: -15px;
        margin-left: -15px;
    }
    .alm-btn-wrap {
        padding-top: 80px;
        .alm-load-more-btn.more {
            font-size: 18px;
            border: 2px solid $primary-text-clr;
            max-width: 180px;
            height: 55px;
            width: 100%;
            font-family: "Poppins";
            font-weight: bold;
            color: $primary-text-clr;
            border-radius: 0;
            &:hover {
                border-color: $primary-text-clr;
                color: $primary-text-clr;
                box-shadow: none;
            }
        }
    }
}


.blog-head {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-between;
    padding-top: 85px;
    @media screen and (min-width: 767px) {
        padding-top: 115px;
    }
    @media screen and (min-width: 900px) {
        padding-top: 200px;
    }
    &__name {
        font-size: 20px;
        a {
            transition: 0.25s ease-in-out;
            &:hover {
                text-decoration: none;
                color: $primary-text-clr-light;
            }
        }
        margin-bottom: 0;
        @media screen and (min-width: 768px){
            font-size: 32px; 
        }
    }
    &__search-btn {
        button {
            background-color: transparent;
            border: 0;
            padding: 0;
            &:focus {
                outline: none;
                background-color: transparent;
                border:0;
            }
            &:hover {
                outline: none;
                background-color: transparent;
                border:0;
            }
        }
    }
}

ul.post-categories {
    display: flex;
    flex-direction: row;
    min-height: 29px;
    li {
        a {
            font-size: 13px;
            font-family: "Roboto";
            font-weight: 400;
            color: $primary-text-clr-light;
            text-decoration: none;
            transition: 0.25s ease-in-out;
            &:hover {
                text-decoration: none;
                color: $primary-text-clr
            }
        }
        display: flex;
        align-items: center;
        text-align: center;
        &:not(:last-child) {
            position: relative;
            &:after {
                content: '|';
                display: inline-flex;
                right: 0;
                padding:0 5px;
                font-size: 20px;
                font-weight: 100;
                color: $primary-text-clr-light;
            }
        }
    }
}

.post-comments-count {
    display: flex;
    align-items: center;
    svg {
        margin-right: 5px;
    }
    span {
        display: flex;
    }
}

.post-author {
    display: flex;
    flex-direction: row;
    align-items: center;
    &__img {
        width: 35px;
        height: 35px;
        background-color: #e9e9e9;
        border-radius: 50%;
        margin-right: 5px;
        overflow: hidden;
        img {
            object-fit: cover;
            width: 100%;
            height: 100%;
        }
    }
    &__name {
        * {
            font-size: 16px;
            color: $primary-text-clr;
            font-family: "Roboto";
        }
    }
}
.fl-sticky {
    .blog-content__card {
        margin-top: 34px;
    }
}
.blog-content {
    padding-bottom: 50px;
    @include breakpoint("sm") {
        padding-bottom: 150px;
    }
    .blog-content--sm-scroll {
        margin-right: -20px ;
        margin-left: -20px ;
        @media screen and (min-width: 768px) {
            margin-right: -15px ;
            margin-left: -15px ;
        }
    }

    @media screen and (max-width: 575px) {
        .blog-content--sm-scroll {
            .blog-content--col {
                max-width: 85%;
            }
        }
    }
    @include breakpoint("sm-max") {
        .blog-content--sm-scroll {
            .blog-content--col {
                max-width: 85%;
            }
        }
    }
    @include breakpoint("sm-max") {
        .blog-content--sm-scroll {
            flex-wrap: nowrap !important;
            overflow-x: auto;
            overflow-y: hidden;
        }
    }

    &.fl-content {
        margin: 0;
    }

    &__card {
        // border: 1px solid #979797;
        background-color: $white;
        height: 100%;
        @media screen and (max-width: 767px) {
            .blog-content__card__description {
                small {
                    margin-top: auto;
                }
            }
        }
        &:not(&--full-width) {
            border-radius: 5px;
            display: flex;
            flex-direction: column;

            .blog-content__card__thumbnail {
                border-top-left-radius: 5px;
                border-top-right-radius: 5px;
            }

            .blog-content__card__description {
                display: flex;
                flex-direction: column;
                small {
                    margin-top: auto;
                }
            }
        }
        &--full-width {
            .blog-content__card__thumbnail {
                @media screen and (min-width: 768px) {
                    border-top-left-radius: 5px;
                    border-bottom-left-radius: 5px;
                }
            }
        }

        &__thumbnail {
            border-top: 1px solid $lightest-grey-5;
            border-left: 1px solid $lightest-grey-5;
            border-right: 1px solid $lightest-grey-5;
            height: 200px;
            background-color: #D8D8D8; // temporary
            flex-shrink: 0;
            @media screen and (min-width: 768px) {
                height: 278px;
            }
            img {
                object-fit: cover;
                width: 100%;
                height: 100%;
            }
        }
        &__description {
            height: 100%;
            padding: 15px 15px;
            font-size: 18px;
            color: $primary-text-clr;

            @media screen and (min-width: 768px) {
                padding: 20px 27px 24px 27px;
            }
            .single-post-link {
                margin-bottom: 22px;
                margin-top: 0;
                display: inline-block;
                font-weight: 700;
                color: $primary-text-clr;
                font-family: "Poppins";
                &:hover {
                    text-decoration: none;
                }
                &:focus {
                    text-decoration: none;
                }
                @media screen and (min-width: 768px) {
                    font-size: 26px;
                    line-height: 39px;
                }
            }
            p {
                font-family: 'Roboto';
                font-size: 16px;
                line-height: 23px;
                margin-bottom: 20px;
                @media screen and (min-width: 992px) {
                    margin-bottom: 55px;
                }
            }
            small {
                font-size: 14px;
                font-family: 'Roboto';
                color: $primary-text-clr;
            }
        }
        &--full-width {
            display: flex;
            flex-direction: column;
            align-items: center;
            border-radius: 5px;
            @media screen and (min-width: 992px) {
                flex-direction: row;
                align-items: flex-start;
                height: 455px;
            }

            .blog-content__card__thumbnail {
                width: 100%;
                flex-grow: 0;
                flex-shrink: 0;
                
                border: 0;
                border-top: 1px solid $lightest-grey-5;
                border-left: 1px solid $lightest-grey-5;
                border-right: 1px solid $lightest-grey-5;
                height: 200px;
                @media screen and (min-width: 992px) {
                    height: 100%;
                    width: 51%;
                    border: 0;
                }
                img {
                    height: 100%;
                }
            }
            .blog-content__card__description {
                border-bottom-left-radius: 5px;
                border-bottom-right-radius: 5px;
                width: 100%;
                flex-grow: 0;
                // flex-shrink: 0;
                height: 100%;
                display: flex;
                flex-direction: column;
                padding: 15px 15px;
                @media screen and (min-width: 992px) {
                    justify-content: center;
                    width: 49%;
                    border-bottom-left-radius: 0;
                    border-top-right-radius: 5px;
                    border-bottom-right-radius: 5px;
                    padding: 15px 30px 15px 65px;
                }
                p {
                    margin-bottom: 55px;
                    @media screen and (min-width: 992px) {
                        margin-bottom: 20px;
                    }
                }
            }
        }
    }
}

.blog-content--col {
    margin-top: 50px;
}

.fl-sticky {
    .blog-content {
       
        &__card {
            &__description {
                width: 100%;
                padding: 15px 15px;
                order: 2;
                @media screen and (min-width: 992px) {
                    order: 1;
                    width: 40%;
                    padding: 15px 65px 15px 0;
                }
                &__additional  {
                    display: flex;
                    flex-direction: row;
                    align-items: center;
                    justify-content: space-between;
                }
            }
            &__thumbnail {
                order:1;
                @media screen and (min-width: 992px) {
                    width: 60%;
                    order: 2;
                }
                border: 1px solid $lightest-grey-5 !important;
                border-radius: 0;
            }
        } 
    }
}

